--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>
-<body>
+	<title>hello coursera</title>
 
+<body>
+<h1>hello coursera</h1>
 </body>
 </html>
